<resources>
    <!-- App, Fragment, and Activity Names -->
    <string name="app_name">Call Your Mother</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="user_fragment">User Fragment</string>
    <string name="manage_fragment">Manage Fragment</string>
    <string name="schedule_fragment">Schedule Fragment</string>
    <string name="debug_frag">Debug Fragment</string>
    <!-- Button Names -->
    <string name="to_user">To User Fragment</string>
    <string name="to_manage">To Manage Fragment</string>
    <string name="to_home">To Home Fragment</string>
    <string name="call_contact">Call</string>
    <string name="manage_contact">Manage</string>
    <string name="delete_contact">Delete</string>
    <string name="save_contact">Save</string>
    <!-- Hints -->
    <string name="contact_name_hint">Contact Name:</string>
    <string name="contact_number_hint">Contact Number:</string>
    <string name="contact_last_call">Last call was</string>
    <!-- Descriptor -->
    <string name="contact_photo_desc">Contact\'s Picture or Initials</string>
    <!-- Notify Names-->
    <string name="requires_permission">Grant permission to access contact book</string>
    <!-- Schedule Options-->
    <string name="frequency_never">Never</string>
    <string name="frequency_daily">Every Day</string>
    <string name="frequency_weekly">Every Week</string>
    <string name="frequency_biweekly">Every Other Week</string>
    <string name="frequency_monthly">Every Month</string>
    <string name="frequency_yearly">Every Year</string>
    <string name="contact_remind_me">Remind me</string>
    <string name="status_caught_up">All caught up!</string>
    <string name="status_behind">Give \'em a call!</string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string-array name="scheduled_frequencies">
        <item>@string/frequency_daily</item>
        <item>@string/frequency_weekly</item>
        <item>@string/frequency_biweekly</item>
        <item>@string/frequency_monthly</item>
        <item>@string/frequency_yearly</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
