<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DebugFragment">

    <TextView
        android:id="@+id/debug_frag_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_frag"
        android:textColor="@color/materialBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debug_frag_tv"
        app:layout_constraintVertical_bias="0.496" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_manage_schedule_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_manage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_home_btn"
        app:layout_constraintTop_toBottomOf="@+id/debug_frag_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_user"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toTopOf="@+id/debug_frag_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>